# insta_bot

./: .gitignore  Insta_bot.py  Readme.md  pyproject.toml  requirements.txt
tests/: conftest.py  pytest.ini
tests/unit_tests/: test_insta_bot.py
