[tool.poetry]
name = "insta-bot"
version = "0.1.0"
description = "Bot for automization your instagram routine"
authors = ["fersus <deriabin_85@mail.ru>"]
readme = "README.md"
packages = [{include = "insta_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.13.0"
webdriver-manager = "^4.0.1"
wget = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
